--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc --project tsconfig-build.json",
+    "build": "rimraf dist && npx tsc --project tsconfig-build.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -20,6 +20,7 @@
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.3.4",
     "typescript": "^5.8.2"
   },
