--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -59,7 +59,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t $ACCOUNT_ID.dkr.ecr.${{ inputs.aws_region }}.amazonaws.com/$REPO_NAME:${{ env.TC_IMAGE_TAG }} \
+          docker build --build-arg CACHE_BUSTER=$(date +%s) \
+            -t $ACCOUNT_ID.dkr.ecr.${{ inputs.aws_region }}.amazonaws.com/$REPO_NAME:${{ env.TC_IMAGE_TAG }} \
             -f devops/docker/Dockerfile .
 
       - name: Push Docker image with tag
