--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gregori Simei",
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
