--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.840.0",
+    "@aws-sdk/client-sqs": "^3.840.0",
     "@aws-sdk/s3-request-presigner": "^3.840.0",
     "axios": "^1.8.4",
     "ts-node": "^10.9.2",
